# libmapper-esp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  component.mk  libmpr_config.h  sdkconfig
components/libmapper/: CMakeLists.txt  component.mk
main/: CMakeLists.txt  main.c  main.cpp
